...
    func setupPlayingNowScreen() {
        self.Label_PodcastEpisodeName.text = self.episodeByPodcast?.episodesByPodcast_EpisodeName ?? "Episode Name"
        self.Label_PodcastEpisodeName.accessibilityLabel = "PlayingNowPodcastEpisodeName"
        
        let podcastIconImageURL = URL(string: self.episodeByPodcast?.episodesByPodcast_PodcastIconURL ?? "")
        self.ImageView_PodcastIcon.sd_setImage(with: podcastIconImageURL)
        self.ImageView_PodcastIcon.accessibilityLabel = "PlayingNowPodcastIcon"
        
        setupPlayingNowScreenButtons()
    }
    
    func setupPlayingNowScreenButtons() {
        self.Button_PlayPausePodcast.setIcon(icon: .fontAwesomeSolid(.play), iconSize: 60, color: .label, forState: .normal)
        self.Button_PlayPausePodcast.accessibilityLabel = "PlayingNowPlayPausePodcast"
        
        self.Button_SeekBackPodcast.setIcon(icon: .fontAwesomeSolid(.undo), iconSize: 40, color: .label, forState: .normal)
        self.Button_SeekBackPodcast.accessibilityLabel = "PlayingNowSeekBackPodcast"
        
        self.Button_SeekForwardPodcast.setIcon(icon: .fontAwesomeSolid(.redo), iconSize: 40, color: .label, forState: .normal)
        self.Button_SeekForwardPodcast.accessibilityLabel = "PlayingNowForwardPodcast"
        
        self.Button_ShowAboutEpisode.setIcon(icon: .fontAwesomeSolid(.alignLeft), iconSize: 20, color: .systemBackground, forState: .normal)
        self.Button_ShowQueue.setIcon(icon: .fontAwesomeSolid(.thList), iconSize: 20, color: .systemBackground, forState: .normal)
        
        self.Button_ShowAirPlayPicker.setIcon(icon: .fontAwesomeSolid(.broadcastTower), iconSize: 20, color: .systemBackground, forState: .normal)
        self.Button_ShowAirPlayPicker.accessibilityLabel = "PlayingNowShowAirPlayPicker"
        
        self.Button_ShowSleepTimer.setIcon(icon: .fontAwesomeSolid(.clock), iconSize: 20, color: .systemBackground, forState: .normal)
        self.Button_ShowSleepTimer.accessibilityLabel = "PlayingNowShowSleepTimer"
        
        self.Button_ShowPlaybackSpeed.setIcon(icon: .fontAwesomeSolid(.tachometerAlt), iconSize: 20, color: .systemBackground, forState: .normal)
        self.Button_ShowPlaybackSpeed.accessibilityLabel = "PlayingNowShowPlaybackSpeed"
        
        self.View_PodcastExtraControls.backgroundColor = .label
        self.View_PodcastExtraControls.layer.cornerRadius = 7
        self.View_PodcastExtraControls.accessibilityLabel = "PlayingNowPodcastExtraControls"
    
        self.Button_ShowAboutEpisode.backgroundColor = .label
        self.Button_ShowAboutEpisode.setTitleColor(.white, for: .normal)
        self.Button_ShowAboutEpisode.layer.cornerRadius = 7
        self.Button_ShowAboutEpisode.accessibilityLabel = "PlayingNowShowAboutEpisode"
        
        self.Button_ShowQueue.backgroundColor = .label
        self.Button_ShowQueue.setTitleColor(.white, for: .normal)
        self.Button_ShowQueue.layer.cornerRadius = 7
        self.Button_ShowQueue.accessibilityLabel = "PlayingNowShowShowQueue"
    }
    
    func setupAVPlayer() {
        var podcast_URL: String? // = episodeByPodcast?.episodesByPodcast_EpsiodeURL ?? "URL"
                
        if episodeByPodcast?.episodesByPodcast_EpisodePathLocal != nil {
...
