...
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wlv-51-Eqm">
                                            <rect key="frame" x="374.5" y="29" width="19.5" height="22"/>
                                            <constraints>
                                                <constraint firstAttribute="height" constant="22" id="ElJ-Ab-2J7"/>
                                            </constraints>
                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                            <state key="normal" image="plus.app.fill" catalog="system"/>
                                            <connections>
                                                <action selector="Button_AddPodcastToSaved:" destination="d22-7H-NXR" eventType="touchUpInside" id="9MP-Ld-6nP"/>
                                            </connections>
                                        </button>
                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9ru-X0-vA7">
                                            <rect key="frame" x="20" y="18" width="45" height="45"/>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="hKW-Pp-fkq" id="qKH-ux-gid"/>
                            <outlet property="delegate" destination="hKW-Pp-fkq" id="KOs-5f-5Qw"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Search" id="Xsv-nx-h9h"/>
                    <connections>
                        <outlet property="tableView_SearchPodcast" destination="Le2-uH-RU4" id="C9J-1G-tX5"/>
                        <segue destination="ePr-v5-nhf" kind="show" identifier="showEpisodesByPodcastVC" id="nEu-rz-GUh"/>
                        <segue destination="RFt-FN-JVe" kind="presentation" identifier="showSearchPodcastsFilterVC" id="tmS-ge-mlt"/>
                    </connections>
                </tableViewController>
...
                                            <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sr8-NY-1zM">
                                            <rect key="frame" x="349" y="15" width="45" height="30"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <state key="normal" title="Play"/>
                                            <connections>
                                                <action selector="Button_PlayPodcast:" destination="WLt-FC-xWa" eventType="touchUpInside" id="tLD-F5-57b"/>
                                            </connections>
                                        </button>
                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="M8K-6S-iMQ">
                                            <rect key="frame" x="20" y="18" width="45" height="45"/>
...
