...
}

extension SearchVC: UISearchBarDelegate {
    func setupSearchInNavBar() {
        searchController.searchBar.delegate = self
        
        searchController.searchBar.placeholder = "Search for a podcast by name, person, topic, genre ..."
        searchController.hidesNavigationBarDuringPresentation = false
        navigationItem.searchController = searchController
    }
}

extension SearchVC: PodcastCellSave {
...
